--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -1,4 +1,4 @@
-#-------------------------------------------------------------------------------
+/*-------------------------------------------------------------------------------
 # BusinessHorizon2
 # 
 #     Copyright (C) 2012-2013  Christian Gahlert, Florian Stier, Kai Westerholz,
@@ -16,6 +16,6 @@
 # 
 #     You should have received a copy of the GNU Affero General Public License
 #     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#-------------------------------------------------------------------------------
+#-------------------------------------------------------------------------------*/
 @import "../runo/styles.css";
 
