--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -17,15 +17,25 @@
 #     You should have received a copy of the GNU Affero General Public License
 #     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #-------------------------------------------------------------------------------*/
-@import "../reindeer/styles.css";
+@import "../chameleon-green/styles.css";
 
+/*
+.v-panel {
+	background-color: red;
+}
+
+.v-panel:hover {
+	background-color: blue;
+	cursor: pointer;
+}
+*/
+
+/*
 .v-app {
     background-image: url("images/background.png");
     background-size:100%;
     height:100%;
-    color: #088A08;
-	font-family: Monotype Corsiva;
-	font-size:17px;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 .v-verticallayout-LayoutNavigationsButtons {
@@ -38,36 +48,18 @@
 
 
 .v-button-caption{
-	color: #088A08;
-	font-family: Monotype Corsiva;
-	font-size:15px;
-	font-weight: 450;
-	font-style:normal;
-	height:19px;
-	line-height:19px;
-	width:100px;
-	text-decoration:none;
-	text-align:center;
-	text-shadow:1px 2px 0px #ffffff;
 }
 
 
 .v-label{
-	color: #088A08;
-	font-family: Monotype Corsiva;
-	font-size:17px;
 		
 }
 
 .v-label-ueberschriften{
-	color: #088A08;
-	font-family: Magneto;
-	font-size:15px;
 }
 
 .v-label-projectname{
 	color: #088A08;
-	font-family: Monotype Corsiva;
 	font-size:17px;
 	font-style:normal;
 	height:15px;
@@ -80,4 +72,4 @@
 	
 }
 
-}
+*/
