--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -19,7 +19,28 @@
 #-------------------------------------------------------------------------------*/
 @import "../chameleon-green/styles.css";
 
+body {
+	background-color: white;
+}
+
+input.v-textfield[type="text"], .v-filterselect{
+	height: 1em;
+	border-radius: 0px;
+}
 /*
+.login_form div.v-button {
+	width: 200px;
+}
+
+.login_form input {
+	width: 194px;
+}
+
+.login_view{
+	margin-top: 200px;
+}
+
+
 .v-panel {
 	background-color: red;
 }
