--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -55,7 +55,7 @@ div.projectlist:hover {
 }
 
 .v-app {
-    background-image: url("images/background.png");
+/*     background-image: url("images/background.png"); */
     background-size:100%;
     height:100%;
 
@@ -96,3 +96,32 @@ div.projectlist:hover {
 	
 }
 
+.v-splitpanel-hsplitter-locked {
+	background-color: black;
+	border: none;
+	background-image: none;
+	width: 3px;
+}
+
+.v-splitpanel-vsplitter-locked {
+	background-color: #4A7EBB;
+	border: none;
+	background-image: none;
+	height: 2px;
+}
+
+.horizontalBottom .v-splitpanel-hsplitter-locked {
+	background-color: #4A7EBB;
+	width: 2px;
+}
+
+.leftContainer {
+	background-color: #E2FDBD;
+}
+
+.mainLayout {
+	border-color: black;
+	border-width: 3px;
+	border-style: solid;
+	box-sizing: border-box;
+}
