--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -97,7 +97,7 @@ div.projectlist:hover {
 }
 
 .v-splitpanel-first-container{
-	background-color: rgb(236, 255, 186);
+	background-color: rgb(216, 239, 188);
     background-size:100%;
     height:100%;
 	
@@ -110,6 +110,7 @@ div.projectlist:hover {
 .v-label-welcomeText{
 	font-size: 20px;
 	font-weight: bold;
+	text-align: right;
 }
 
 .v-caption-logo{
