Felder des ParameterViews umgebaut. Was soll mit den in der neuen View jetzt nicht vorhanden restlichen Feldern passieren? Müssten noch aus dem Presenter entfernt werden. #231

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -26,7 +26,6 @@
 input.v-textfield[type="text"], .v-filterselect{
 	height: 1em;
 	border-radius: 0px;
-	margin: 15px;
 }
 
 .login_view{
@@ -155,11 +154,7 @@ div.projectlist:hover {
 	font-size: 12pt;
 }
 
-.v-vertical > .v-spacing {
-	margin-left: 20px;
-	margin-top: 20px;
-}
-
-.v-textfield {
-	margin-top: 100px;
+.v-verticallayout-parameter {
+	margin-left: 5%;
+	margin-top: 5%;
 }
