--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -55,7 +55,7 @@ div.projectlist:hover {
 }
 
 .v-app {
-    background-image: url("images/background.png"); 
+/*     background-image: url("images/background.png"); */
     background-size:100%;
     height:100%;
 
@@ -104,19 +104,23 @@ div.projectlist:hover {
 }
 
 .v-splitpanel-vsplitter-locked {
-	background-color: #4A7EBB;
+	background-color: black;
 	border: none;
 	background-image: none;
 	height: 2px;
 }
 
+.v-button-wrap {
+	background: initial;
+}
+
 .horizontalBottom .v-splitpanel-hsplitter-locked {
-	background-color: #4A7EBB;
+	background-color: black;
 	width: 2px;
 }
 
 .leftContainer {
-	background-color: #E2FDBD;
+	background-color: #D8EFBC;
 }
 
 .mainLayout {
@@ -125,3 +129,88 @@ div.projectlist:hover {
 	border-style: solid;
 	box-sizing: border-box;
 }
+
+.addProjectButton {
+	background: url("./images/icons/newIcons/1418766077_circle_add_plus_-128.png");
+	background-size: cover;
+	border: none;
+}
+
+.editProjectButton {
+	background: url("./images/icons/newIcons/1418765965_editor_pencil_pen_edit_write-128.png");
+	background-size: cover;
+	border: none;
+}
+
+.deleteProjectButton {
+	background: url("./images/icons/newIcons/1418766003_editor_trash_delete_recycle_bin_-128.png");
+	background-size: cover;
+	border: none;
+}
+
+.deleteChoiceButton{
+	background: url("./images/icaons/newIcons/1418831406_circle_close_delete-128.png");
+	background-size: cover;
+	border: none;
+}
+
+.homeButton{
+	background: url("./images/icons/newIcons/1418766062_house_home-128.png");
+	background-size: cover;
+	border: none;
+}
+
+.accountButton{
+	background: url("./images/icons/newIcons/1418774135_user_male-128.png");
+	background-size: cover;
+	border: none;
+}
+
+.topBarButtonContainer {
+/* 	margin-top: 10%; */
+	margin-right: 5%;
+}
+
+.topBarButtonLabel {
+/* 	margin-top: 2px; */
+	font-size: 12pt;
+}
+
+.seitenLabel {
+	font-size: 20pt;
+}
+
+.descriptionLabel {
+	font-size: 16pt;
+}
+
+.projectName {
+	font-size: 20pt;
+}
+
+.singleProject {
+	background-color: #D8EFBC;
+	border: 2px solid black;
+	box-sizing: border-box;
+	margin-bottom: 20px;
+}
+
+.singleProjectSelected {
+	background-color: #92D050;
+	border: 2px solid black;
+	box-sizing: border-box;
+	margin-bottom: 20px;
+}
+
+.projectDetailsLayout {
+	margin-left: 5%;
+}
+
+.projectDetailsLabel {
+	font-size: 18pt;
+}
+
+.projectDetailsValue {
+	font-size: 16pt;
+}
+
