--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -120,3 +120,13 @@ div.projectlist:hover {
 	
 }
 
+.v-button-registerBtn {
+	background: url("./images/iconsNewUI/head.png");
+	background-size: cover;
+	border: none;
+}
+
+.registerBtnLabel{
+	font-size: 18px;
+}
+
