Fragezeichen Icons + tooltip text hinzugefügt lauffähig #231

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -220,6 +220,10 @@ div.projectlist:hover {
     font-size:12pt;
     margin: 5px;
   }
+  
+.questionIcon {
+	margin: 5px;
+}
 
 .seitenLabel {
 	font-size: 20pt;
