kleiner Fehler im ButtonMiddle behoben In der DescriptionView Text "auf- und zuklappbar" implementiert

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -504,3 +504,15 @@ textarea.projectNameInput{
 	font-size: 14pt;
 }
 
+.v-label-wrap {
+	white-space: normal;
+}
+
+.descriptionText {
+	font-size: 12pt;
+}
+
+.descriptionHeadline {
+	font-size: 13pt;
+}
+
