Tabelle zur Direkteingabe fertig;

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -576,3 +576,35 @@ textarea.projectNameInput{
 	font-size: 16pt;
 }
 
+.v-table-row-odd {
+	background-color: #92D050;
+	height: 30px;
+}
+
+.v-table-row {
+	background-color: #D8EFBC;
+	height: 30px;
+}
+
+.v-table-header {
+	background-color: #92D050;
+	font-weight: bold;
+}
+
+.v-table-header-wrap {
+	border: none;
+}
+
+.v-table-caption-container {
+	text-shadow: none;
+}
+
+.v-table-body {
+	border: none;
+	font-weight: bold;
+}
+
+.v-table {
+	font-size: 12pt;
+}
+
