Beschreibungs-Screens implementiert. #242

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -566,10 +566,12 @@ textarea.projectNameInput{
 
 .descriptionText {
 	font-size: 12pt;
+	margin-left: 5px;
 }
 
 .descriptionHeadline {
 	font-size: 13pt;
+	margin-left: 5px;
 }
 
 .periodHeaderLabel {
