Scenario Screen implementiert. Noch ein paar kleine Anpassungen nötig. Grundsätzlich fertig.

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -610,3 +610,21 @@ textarea.projectNameInput{
 	font-size: 12pt;
 }
 
+.scenarios {
+	font-size: 12pt;
+	margin-left: 5px;
+}
+
+.addScenario {
+	font-weight: bold;
+}
+
+.scenarios input[type="text"] {
+    font-size:12pt;
+    margin: 5px;
+  }
+  
+.deleteScenario:hover + gridLayoutScenarios{
+	background-color: red;
+	
+}
