Ausgabe fertig bis auf Charts

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -615,6 +615,15 @@ textarea.projectNameInput{
 	font-weight: bold;
 }
 
+.font12bold{
+	font-size: 14pt;
+	font-weight: bold;
+}
+
+.font12{
+	font-size: 12pt;
+}
+
 .scenarios {
 	font-size: 12pt;
 	margin-left: 5px;
@@ -632,4 +641,19 @@ textarea.projectNameInput{
 .deleteScenario:hover + gridLayoutScenarios{
 	background-color: red;
 	
+}
+
+.resultScenarioLayout{
+	background-color: #D8EFBC;
+	border: 2px solid black;
+	padding: 10px;
+	box-sizing: border-box;
+}
+
+.companyValueLayout{
+	background-color: #FFFF00;
+	border: 2px solid black;
+	padding-left: 10px;
+	padding-right: 10px;
+	box-sizing: border-box;
 }
