Resultscreen: Formatierung Ausgabetabelle mehrere Szenarien Szenarioscreen: Berechnungsmethodenauswahl entfernt

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -708,6 +708,8 @@ textarea.projectNameInput{
 }
 
 .v-table-row-table-capital .v-table-cell-content {
-	background-color: white;
+	background-color: #FCFFF6;
 	border-right: 1px solid black;
+    vertical-align: middle;
+    padding-top: 12px;
 }
