Validierug der Direkten Eingabe angepasst. #247

--- a/WebContent/VAADIN/themes/bh2/styles.css
+++ b/WebContent/VAADIN/themes/bh2/styles.css
@@ -736,3 +736,9 @@ textarea.projectNameInput{
    -ms-filter: alpha(opacity=80);  
    filter: alpha(opacity=80);  
  }  
+ 
+input.showErrors {
+ 	border-color: red;
+ 	border-radius: 10px;
+ 	background-color: #FFD700;
+ }
